Fix alignment of Station Hud markers

--- a/code/ui/EntityHud.scss
+++ b/code/ui/EntityHud.scss
@@ -104,12 +104,16 @@ EntityHudBar {
 }
 
 OutpostHud {
+    background-color: rgba(0 0 0 0.4);
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    width: 48px;
+    height: 48px;
+    
     > .letter {
         font-family: $fontBold;
-        background-color: rgba(0 0 0 0.6);
-        border-radius: 50%;
-        padding: 16px 32px;
-        font-size: 48px;
+        font-size: 32px;
         color: white;
     }
 
